--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-test-renderer": "^16.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
